# anp_open_sdk/anp_users/user_5fea49e183c6c211/openapi_did%3Awba%3Alocalhost%253A9527%3Awba%3Auser%3A5fea49e183c6c211.yaml
@@ -39,6 +39,24 @@ paths:
             application/json:
               schema:
                 type: object
+  /wba/hostuser/{user_id}/did.json:
+    get:
+      summary: Get Hosted DID document
+      operationId: get__wba_hostuser_user_id_did.json
+      parameters:
+      - name: req_did
+        in: query
+        required: false
+        schema:
+          type: string
+        default: demo_caller
+      responses:
+        '200':
+          description: 成功响应
+          content:
+            application/json:
+              schema:
+                type: object
   /wba/user/{resp_did}/ad.json:
     get:
       summary: Get agent description
